<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.springdoc</groupId>
	<artifactId>springdoc-openapi</artifactId>
	<version>2.3.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Spring openapi documentation</name>
	<description>Spring openapi documentation</description>
	<url>https://springdoc.org/</url>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.3</version>
	</parent>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Badr NASS LAHSEN</name>
			<email>support@springdoc.org</email>
			<organization>springdoc</organization>
			<organizationUrl>https://springdoc.org/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>git@github.com:springdoc/springdoc-openapi.git</url>
		<connection>scm:git:git@github.com:springdoc/springdoc-openapi.git</connection>
		<developerConnection>scm:git:git@github.com:springdoc/springdoc-openapi.git
		</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<modules>
		<module>springdoc-openapi-starter-common</module>
		<module>springdoc-openapi-starter-webmvc-api</module>
		<module>springdoc-openapi-starter-webflux-api</module>
		<module>springdoc-openapi-starter-webmvc-ui</module>
		<module>springdoc-openapi-starter-webflux-ui</module>
	</modules>

	<properties>
		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
		<nexus-staging-maven-plugin>1.6.8</nexus-staging-maven-plugin>
		<swagger-api.version>2.2.20</swagger-api.version>
		<swagger-ui.version>5.10.3</swagger-ui.version>
		<gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
		<jaxb-impl.version>2.1</jaxb-impl.version>
		<javax.jws-api.version>1.1</javax.jws-api.version>
		<jjwt.version>0.9.1</jjwt.version>
		<therapi-runtime-javadoc.version>0.15.0</therapi-runtime-javadoc.version>
		<spring-cloud-function.version>4.0.0</spring-cloud-function.version>
		<spring-security-oauth2-authorization-server.version>1.0.1</spring-security-oauth2-authorization-server.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- swagger dependencies -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-core-jakarta</artifactId>
				<version>${swagger-api.version}</version>
			</dependency>
			<!-- swagger ui -->
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>swagger-ui</artifactId>
				<version>${swagger-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.xml</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${jaxb-impl.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.jws</groupId>
				<artifactId>javax.jws-api</artifactId>
				<version>${javax.jws-api.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jjwt.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- spring Cloud -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-function-web</artifactId>
				<version>${spring-cloud-function.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-function-web</artifactId>
				<version>${spring-cloud-function.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-function-webflux</artifactId>
				<version>${spring-cloud-function.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-authorization-server</artifactId>
				<version>${spring-security-oauth2-authorization-server.version}</version>
			</dependency>
			<!-- SpringDoc -->
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webflux-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.gmavenplus</groupId>
					<artifactId>gmavenplus-plugin</artifactId>
					<version>${gmavenplus-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes/META-INF</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/..</directory>
									<includes>
										<include>LICENSE</include>
										<include>COPYRIGHT</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>ci</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>springdoc-openapi-starter-common</module>
				<module>springdoc-openapi-starter-webmvc-api</module>
				<module>springdoc-openapi-starter-webflux-api</module>
				<module>springdoc-openapi-starter-webmvc-ui</module>
				<module>springdoc-openapi-starter-webflux-ui</module>
				<module>springdoc-openapi-tests</module>
			</modules>
		</profile>
		<profile>
			<id>gpg</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<sourcepath>src/main/java</sourcepath>
							<source>17</source>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${nexus-staging-maven-plugin}</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>com.thoughtworks.xstream</groupId>
								<artifactId>xstream</artifactId>
								<version>1.4.15</version>
							</dependency>
						</dependencies>
					</plugin>
					<plugin>
						<artifactId>maven-release-plugin</artifactId>
						<version>${maven-release-plugin.version}</version>
						<configuration>
							<tagNameFormat>v@{project.version}</tagNameFormat>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<useReleaseProfile>false</useReleaseProfile>
							<releaseProfiles>gpg</releaseProfiles>
							<goals>deploy</goals>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-release</id>
			<name>Spring release</name>
			<url>https://repo.spring.io/release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshot</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-releases</id>
			<name>Spring Releases</name>
			<url>https://repo.spring.io/release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
